--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 *.ipynb
+ch_filtered_removal_companies_1.csv
+ch_filtered_removal_companies_2.csv
+ch_filtered_removal_companies_3.csv
+ch_filtered_removal_companies_4.csv
+ch_filtered_removal_companies_5.csv
+ch_filtered_removal_companies_6.csv
+ch_filtered_removal_companies_7.csv
+near_me_removal_companies.csv
